<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MoodEntry">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TextView
            android:id="@+id/moodEntryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_entry"
            android:layout_marginTop="45dp"
            app:layout_constraintBottom_toTopOf="@id/moodField1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/moodField1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:entries="@array/emotions"
            app:layout_constraintTop_toBottomOf="@id/moodEntryTitle"
            app:layout_constraintBottom_toTopOf="@id/moodField2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/moodField2"
            android:layout_width="300dp"
            android:layout_height="330dp"
            android:layout_marginBottom="70dp"
            android:hint="@string/describe_situation"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@+id/registerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginBottom="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>